<resources>
    <string name="app_name">SnapshotsForReddit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_posts">View Posts</string>
    <string name="title_subreddits">Subreddits</string>
    <string name="title_home">Home</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_snapshots">Snapshots</string>
    <string name="hint_search_fragment">Search Posts, Subreddits, Users</string>
    <string name="menu_accounts">Accounts</string>
    <string name="title_boxes">Boxes</string>
    <string name="subreddit_icon">Subreddit Icon</string>
    <string name="subreddit_name">Subreddit Name</string>
    <string name="post_image_or_video">Post image or video</string>
    <string name="button_to_upvote_post">Button to upvote post</string>
    <string name="button_to_downvote_post">Button to downvote post</string>
    <string name="more_options">More options</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="save">Save</string>
    <string name="reply">Reply</string>
    <string name="hide">Hide</string>
    <string name="cancel">Cancel</string>
    <string name="configure_feed_settings">Configure feed settings</string>
    <string name="reddit_settings">REDDIT SETTINGS</string>
    <string name="error_with_loading">Error with loading</string>
    <string name="refresh">Refresh</string>
    <string name="compact_view">Compact View</string>
    <string name="subreddit">Subreddit</string>
    <string name="scroll_to_top">Scroll To Top</string>
</resources>